# coredump

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: gitlab-ci.yml
src/: lib.rs
tests/: coredump.rs
